2006-04-06  Thomas Andersen  <phomes@gmail.com>

	* menu.c: Update About dialog

2006-04-04  Callum McKenzie  <callum@spooky-possum.org>

	* gnobots.c  : Patch from Przemys©aw Grzegorczyk to unref
	the GnomeProgram in all main loops.

2006-04-02  Callum McKenzie  <callum@spooky-possum.org>

	* gnobots.c: Remove libgnomeui/gnome-window-icon.h from the
	includes.

	* Makefile.am: Move the icon cache update down the build tree.

2006-03-31  Callum McKenzie  <callum@spooky-possum.org>

	* menu.c (about_cb): Add the icon to the about dialog properties.

	* gnobots2.desktop.in: 
	* gnobots.c: 
	* Makefile.am: Install both png and svg icons into the icon theme
	and set the icon by name.

2006-03-28  Callum McKenzie  <callum@spooky-possum.org>

	* gnobots.c: Patch from Thomas Thurman to upgrade popt to
	GOption. Minor fixes as suggested by Paolo Borelli. Converted
	gnome_window_icon_... to gtk_window_set_default... .

2006-03-26  Callum McKenzie  <callum@spooky-possum.org>

	* game.c (update_arena): Make sure a player killed by the last two
	robots colliding on top of him stays dead. Fixes bug #335920.

2006-03-22  Callum McKenzie  <callum@spooky-possum.org>

	* help/C/gnobots2.xml: Remove the doctable link, it was broken
	*and* being used inappropriately. Replaced with the 
	ghelp:gnome-feedback link. Bug #335263.

2006-03-07  Callum McKenzie  <callum@spooky-possum.org>

	* keyboard.h: 
	* keyboard.c: Don't upper-case key-presses. This allows alphabetic
	keys to be used as controls. Fixes bug #333696.

2006-02-18  Callum McKenzie  <callum@spooky-possum.org>

	* gnobots.c: Use the new SVG file for the appicon, not the old PNG
	one.

2006-02-10  Callum McKenzie  <callum@spooky-possum.org>

	* game.c: Set up the temporary arena correctly when testing for
	safe teleports. Also restore the AWOL logic for checking that we
	aren't over-using safe teleports. Also make sure the player is
	killed properly (and factorise out the code to do it).